@@ -1,5 +1,8 @@
 2001-07-27  Bradford Hovinen  <hovinen@ximian.com>
 
+	* bonobo-config-archiver.c (bonobo_config_archiver_destroy): Don't
+	unref the event source or the property bag
+
 	* RELEASE : 1.5.2
 
 2001-07-24  Richard Hestilow  <hestilow@ximian.com>
